# test-rig-demo-test-rig-simulator

./: README.md  quix.yaml
backend/: .gitignore  app.yaml  dockerfile  main.py  pyproject.toml
backend/api/: app.py  auth.py  config_api.py  influx.py  models.py  mongo.py  settings.py  utils.py
backend/api/routes/: files.py  links.py  logbook.py  tests.py
backend/tests/: conftest.py  portal_api.py  test_auth.py  test_files.py  test_links.py  test_logbook.py  test_tests.py  utils.py
frontend/: .gitignore  README.md  app.yaml  dockerfile  main.py  pyproject.toml
frontend/app/: env.py  models.py  store.py  theme.py  views.py
frontend/app/components/base/: __init__.py  badge.py  buttons.py  confirmation_dialog.py  external_links_bar.py  fields.py  form.py  link.py  placeholder.py  theme_switcher.py
frontend/app/components/tests/: __init__.py  datacard.py  file_tile.py  file_upload_manager.py  linklist.py  logbook_entry_tile.py  status_badge.py  tests_filter.py  tests_table.py
frontend/app/utils/: date.py  debug.py  exceptions.py  query_api.py  validation.py
frontend/app/utils/routing/: __init__.py  handlers.py  models.py  router.py
frontend/assets/: index.html
labview-sim/: app.yaml  main.py  requirements.txt  sample.data
mongodb/: README.md  app.yaml  dockerfile
rigecu/: app.yaml  main.py  requirements.txt
simple-sim/: README.md  app.yaml  main.py
