[project]
name = "test-manager-ui"
description = "Flet-based application for the Test Manager."
requires-python = ">=3.13"
version = "0.1.0"

authors = [
	{ name = "Quix Analytics Ltd", email = "devs@quix.io" },
]

dependencies = [
	"flet[all,web]==0.28.3",
	"httpx>=0.28.1",
	"humanize>=4.13.0",
	"repath>=0.9.0",
]

[dependency-groups]
dev = [
	"ruff",
	"mypy",
]

[tool.mypy]
strict = true
